# VSRG-KeyVisualizer

./: .gitignore  AGENTS.md  Cargo.toml  README-EN.md  README.md  build.rs  config.json  config.json.bak  日志.txt
.skills/slint/: SKILL.md
BACKUP/: config.json
Code_template/: template.rs
configs/: .active
configs/profiles/: 4K.json  New Profile 10.json  New Profile 2.json  New Profile 5.json  New Profile.json  default.json  taiko.json
src/: configs.rs  events.rs  main.rs  physics.rs  ri_table.rs  state.rs
src/core/: color.rs  config_def.rs  config_manager.rs  mod.rs
src/gui/: param_panel_window.rs  settings_window.rs
src/platform/: mod.rs  window.rs
src/ui/: model.rs  state.rs
ui/: application.slint  global_settings_panel.slint  key_capture_dialog.slint  key_data.slint  key_props_panel.slint  main_window.slint  profile_panel.slint  settings_preview.slint  settings_window.slint  test.slint
ui/dialogs/: dialogs.slint  key_capture_dialog.slint
ui/main_window/: main_window.slint
ui/settings/: global_settings_panel.slint  key_props_panel.slint  param_panel_window.slint  profile_panel.slint  settings_preview.slint  settings_window.slint
