[package]
name = "KeyTick"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.16.1"
winit = "0.30.13"
i-slint-backend-winit = "1.16.1"
crossbeam-channel = "0.5.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
lazy_static = "1.5.0"
raw-window-handle = "0.6.2"

# 仅在类 Unix 系统下引入 rdev
[target.'cfg(unix)'.dependencies]
rdev = "0.5.3"

# 仅在 Windows 系统下引入 windows
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_UI_Input",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
] }

[build-dependencies]
slint-build = "1.16.1"